added some boxes

--- a/Playground-2.html
+++ b/Playground-2.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Felipe's Playground 2</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
 	<h1 class="bigtitle">Playground</h1>
 	<h1 class="otherone">Learn how to code</h1>
-	<p>Coding is fun</p>
-	<input type="range">
-	<br>
-	<input type="checkbox">
+	<div class="parent-box">
+		<h2>Caja madre</h2>
+			<div class="box-box">
+			<h2>Caja hija</h2>	
+			</div>
+	</div>
 	</body>
 </html>
